[package]
name = "ascii-bomb-ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ascii_bomb_ecs_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.11.2"
cfg-if = "1.0"
rodio = { version = "0.14", default-features = false, features = ["wav", "vorbis"] }
anyhow = "1.0"
itertools = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
    "dynamic",
    "bevy_winit",
    "png",
    "render",
    "x11",
    "bevy_asset",
] }
kira = "0.5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
    "bevy_winit",
    "png",
    "render",
] }
once_cell = "1.8.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "GainNode",
] }
