[package]
name = "ascii-bomb-ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ascii_bomb_ecs_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
cfg-if = "1.0"
rodio = { version = "0.14", default-features = false, features = [
    "wav",
    "vorbis",
] }
anyhow = "1.0"
itertools = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "dynamic_linking",
    "bevy_winit",
    "png",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "x11",
    "bevy_asset",
    "multi-threaded",
] }
kira = "0.5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "png",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "webgl2",
] }
once_cell = "1.8.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "GainNode",
] }
# needed in order for getrandom 0.3.3 to work on wasm32
getrandom = { version = "0.3", features = ["wasm_js"] }
# needed in order for uuid 1.17 to work on wasm32
uuid = { version = "1.17", features = ["rng-getrandom"] }
